mono (1.2.6-1~pre1) UNRELEASED; urgency=low

  * New upstream release.
    + Invoking GetFields on emitted type doesn't crash anymore, as seen with
      nemerle. (Closes: #452585)
  * debian/rules:
    + Updated MONO_API to 1.2.6
    + Enabled moonlight in configure call.
  * debian/patches/00list:
    + Disabled armel_fix_configure_fpu_check.dpatch
      (FPU check is fixed upstream)
  * debian/patches/kfreebsd_support.dpatch:
    + Updated (and re-autoconfed)
  * debian/patches/fix-mono.pc.in.dpatch:
    + Updated
  * debian/patches/ppc_fix_mono_class_proxy_vtable_r84948.dpatch:
    + Removed, already applied upstream.
  * debian/patches/fix_Mono.Cecil_linkage.dpatch:
    + Link Mono.Cecil(.Mdb) against CLI 1.0 instead of 2.0, patch taken from
      upstream.
  * debian/libmono1.0-cil.install:
    + Added Mono.Cecil.dll and Mono.Cecil.Mdb.dll.
  * debian/control:
    + Created mono-smcs, mono-xbuild, mono-1.0-tools-dev, mono-2.0-tools-dev,
      libmono-mozilla0.1-cil, libmono-corlib2.1-cil, libmono-system2.1-cil and
      libmono-db2-1.0-cil packages.
      (monolinker.exe is now shipped, Closes: #443833)
  * debian/update-shlibs.local.sh:
    + Wrote this script to ease updating the debian/shlibs.local file.
  * debian/shlibs.local:
    + Updated

 -- Mirco Bauer <meebey@debian.org>  Sun, 16 Dec 2007 15:44:33 +0100

mono (1.2.5.1-2) unstable; urgency=high

  * Mirco 'meebey' Bauer:
    + debian/mono.runtime-script:
      - When removing GAC libraries, output the assembly name correctly on
        errors.
    + debian/patches/fix_BigInteger_overflow_CVE-2007-5197.dpatch:
      - Fixes CVE-2007-5197, thus urgency set to high.

 -- Mirco Bauer <meebey@debian.org>  Sun, 04 Nov 2007 15:34:08 +0100

mono (1.2.5.1-1) unstable; urgency=low

  * Mirco 'meebey' Bauer:
    + New upstream (bugfix) release. (Closes: #443468)
    + debian/System.Windows.Forms.dll.config:
      - Added libX11 and libXcursor.
