@@ -1,2 +1,0 @@
-debian/tmp/usr/bin/mono-service
-debian/tmp/usr/lib/mono/1.0/mono-service.exe*
