@@ -1,2 +1,0 @@
-debian/tmp/usr/bin/mono-service2
-debian/tmp/usr/lib/mono/2.0/mono-service.exe*
